add some effects of the buttons and the video

--- a/views/camera.ejs
+++ b/views/camera.ejs
@@ -17,7 +17,7 @@
   <div class="row">
     <div class="col">
       <h4>Local Stream</h4>
-      <video id="localStream" autoplay width="480px" height="360px" poster="/static/img/webrtc.png"></video>
+      <video id="localStream" autoplay width="480px" height="360px" poster="/static/img/webrtc.png" class="kurentoStream"></video>
     </div>
     <div class="col">
       <div class="h4">&nbsp;</div>
@@ -39,7 +39,7 @@
       <div class="row justify-content-start">
         <div class="col-lg-3">
           <button id="start" class="btn btn-success btn-block"><i class="fas fa-play-circle"></i>&nbsp; start</button>
-          <button id="stop" class="btn btn-danger btn-block"><i class="fas fa-stop-circle"></i>&nbsp; stop</button>
+          <button id="stop" class="btn btn-danger btn-block" disabled><i class="fas fa-stop-circle"></i>&nbsp; stop</button>
         </div>
       </div>
     </div>
