--- a/views/viewer.ejs
+++ b/views/viewer.ejs
@@ -35,13 +35,13 @@
       <div class="row justify-content-start">
         <div class="col-lg-3">
           <button id="start" class="btn btn-success btn-block"><i class="fas fa-play-circle"></i>&nbsp; start</button>
-          <button id="stop" class="btn btn-danger btn-block"><i class="fas fa-stop-circle"></i>&nbsp; stop</button>
+          <button id="stop" class="btn btn-danger btn-block" disabled><i class="fas fa-stop-circle"></i>&nbsp; stop</button>
         </div>
       </div>
     </div>
     <div class="col">
       <h4>Remote Stream</h4>
-      <video id="remoteStream" autoplay width="480px" height="360px" poster="/static/img/webrtc.png"></video>
+      <video id="remoteStream" autoplay width="480px" height="360px" poster="/static/img/webrtc.png" class="kurentoStream"></video>
     </div>
   </div>
 </div>
