--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -40,6 +40,9 @@
         </div>
       </div>
     </div>
+    <script>
+      const iceServers = <%- iceServers %>;
+    </script>
     <%- script %>
   </body>
 </html>
