--- a/views/camera.ejs
+++ b/views/camera.ejs
@@ -18,7 +18,9 @@
   <div class="row">
     <div class="col">
       <h4>Local Stream</h4>
-      <video id="localStream" autoplay width="480px" height="360px" poster="/static/img/webrtc.png" class="kurentoStream"></video>
+      <div class="mx-auto videoHolder">
+        <video id="localStream" autoplay poster="/static/img/webrtc.png" class="kurentoStream"></video>
+      </div>
     </div>
     <div class="col">
       <div class="h4">&nbsp;</div>
