refactor the layout of pages

--- a/views/camera.ejs
+++ b/views/camera.ejs
@@ -44,6 +44,8 @@
       <div class="row justify-content-start">
         <div class="col-lg-3">
           <button id="start" class="btn btn-success btn-block"><i class="fas fa-play-circle"></i>&nbsp; start</button>
+        </div>
+        <div class="col-lg-3">
           <button id="stop" class="btn btn-danger btn-block" disabled><i class="fas fa-stop-circle"></i>&nbsp; stop</button>
         </div>
       </div>
